@@ -1,3 +1,7 @@
+2011-10-07 Roman
+- UI.VCAEngine: Document generation repeat limit for primitive "Document" is set to time limit 5s.
+
+
 2011-10-06 Roman
 - DAQ: Force loading for all fields of controller's and parameter's object is added.
 - DAQ.ModBus: Force protocol set on creation to "TCP", for some specific fields visible update.
